data/derived/fa15/progs/unify/prog1813.ml.out
Characters 25-36:
  let _ = assoc([1,1],"a",[([1,2],"c"),([1,1,1],"a")]);;
                           ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
